06_project_nginx/gateway.tf
resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Project = "nginx"
  }
}
